move validation to different module and create first webtests